update rule